--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   "engines": {
     "node": ">=6.4.0"
   },
+  "jest": {
+    "testRegex": "(\\.|/)test\\.js$"
+  },
   "devDependencies": {
-    "@types/jest": "^23.1.1",
+    "@types/jest": "^24.0.13",
     "jest": "^24.8.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.5.1"
   }
 }
