--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dist/observe.d.ts"
   ],
   "scripts": {
-    "build": "tsc --newLine lf",
+    "build": "tsc",
     "test": "jest"
   },
   "main": "dist/observe.js",
@@ -36,8 +36,8 @@
     "testRegex": "(\\.|/)test\\.js$"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^26.6.3",
-    "typescript": "^4.2.4"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "typescript": "^5.4.5"
   }
 }
